    TODO: Use UTI methods instead of deprecated imageFileTypes
    TODO: Test new imageFileTypes stuff + UTI change + ibtool stuff
    TODO: Use bindings for defaults
    TODO: Hide PROGRESS:XX and other bidirectional communications syntax from output text field
    TODO: Fix issue with delete button in args window (& possibly drop settings too)

    * New retina icons in script type popup button
    * No longer linking to Carbon framework
    * CFBundleDevelopmentRegion in generated apps now declared using ISO code
    * New default "Use system font" option for status menu item output
    * New MENUITEMICON: syntax to set menu item icon in status menu output mode
    * The built-in editor has been much enhanced, with line numbering, configurable text size and other improvements
    * Migrated from UKKqueue to VDKQueue and got all file system watching working properly again
    * Uniform Type Identifiers (UTIs) are now supported in drop settings
    * More examples
    * Scripts can now send messages to Notification Center via the NOTIFICATION:* syntax
    * New help buttons in main window and drop settings
    * Previewing status item menu now shows actual script output instead of placeholder text
    * Status menu items can now only have a title or an icon, not both, due to changes in Mac OS X
    * Show Shell Command window now shows install status of command line tool
    * Got rid of old, low-resolution preset icons
    * New release build script
    * Built with XCode 7 and now requires Mac OS X 10.7 or later and a 64-bit Intel system. Older versions continue to work just fine on 32-bit 10.6 systems, and version 4.4 still works on PowerPC. But it's time to leave the past behind. It's been 9 years since the last 32-bit Mac was released.
    * Syntax checker window now shows the command invoked when checking script syntax
    * App size estimation is now more accurate
    * New contexual menu button for icon view